HelloUltraviolet/Fixtures/RejectedSource/Procedures/ContractResultOutsidePostcondition/Expected.uv
//! Expected diagnostic metadata for the ContractResultOutsidePostcondition rejected-source specimen.

expectedDiagnostic("E-SEM-2806", "req.15.ContractResultProperties")
